# database_builder_libs_rs

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cz.yaml  docker-compose.yml  domain.tql  known_failures.json  lefthook.yml
.github/workflows/: run_tests.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  progress.rs
crates/scepa/: Cargo.toml
crates/scepa-macros/: Cargo.toml
crates/scepa-macros/src/: args.rs  attributes.rs  delegation.rs  entity.rs  lib.rs  relation.rs  role.rs  schema.rs  utils.rs
crates/scepa/src/: domain.rs  identity.rs  lib.rs  log.rs  models.rs  pipeline.rs  progress.rs  typedb.rs
crates/scepa/src/models/: chunk.rs  entities.rs  generated.rs  relations.rs  tests.rs
crates/scepa/src/models/entities/: document.rs  institution.rs  person.rs  publication_venue.rs
crates/scepa/src/models/relations/: citation.rs  contribution.rs  publication_event.rs  publishing.rs
crates/scepa/src/pipeline/: error.rs  storage.rs  tei.rs  typedb.rs
crates/scepa/src/pipeline/tei/: parser.rs
crates/scepa/tests/: typedb_integration.rs
schemas/typedb/: domain.tql
src/: ingestion.rs  lib.rs  log.rs  main.rs  models.rs  pipeline.rs  progress.rs  server.rs  stores.rs
src/ingestion/: batch.rs  enrich.rs  error.rs  export.rs  extract.rs  metadata.rs  pipeline.rs  transform.rs
src/ingestion/enrich/: institution_kind.rs  ror.rs
src/ingestion/export/: json.rs  qdrant.rs  tei_xml.rs  typedb.rs
src/ingestion/extract/: grobid.rs
src/ingestion/extract/embedding/: config.rs  error.rs  source.rs
src/ingestion/extract/grobid/: config.rs  error.rs  source.rs
src/ingestion/extract/ror/: config.rs  error.rs  source.rs
src/ingestion/parse/tei/: error.rs  reader.rs
src/ingestion/transform/: tei.rs
src/ingestion/transform/embedding/: config.rs  error.rs  source.rs
src/ingestion/transform/tei/: authors.rs  content.rs  funding.rs  metadata.rs  paper.rs  publication.rs  text.rs
src/models/: domain.rs  paths.rs  tei.rs
src/models/domain/: author.rs  content.rs  graph.rs  institution.rs  literature.rs  metadata.rs  paper.rs  pdf.rs  project.rs  publication.rs  relation.rs  source.rs
src/models/paths/: pdf.rs  tei_xml.rs
src/models/tei/: attributes.rs  bibliography.rs  document.rs  header.rs  text.rs
src/pipeline/: error.rs  tei.rs
src/pipeline/source/: grobid.rs
src/pipeline/source/grobid/: client.rs  error.rs  retry.rs
src/pipeline/tei/: model.rs  parser.rs  tree.rs
src/server/: auth.rs  metadata_store.rs  oidc.rs  routes.rs  session.rs
src/stores/: connection.rs  typedb.rs
src/stores/qdrant/: config.rs  error.rs  store.rs
src/stores/studio/: config.rs  error.rs  store.rs
src/stores/typedb/: config.rs  error.rs  store.rs
