[package]
name = "scepa-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
indicatif = "0.18.3"
reqwest = { version = "0.13.4", features = ["multipart"] }
rootcause = "0.12.1"
rootcause-backtrace = "0.12.1"
quick-xml = "0.37.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt"] }
typetag = "0.2.22"
