[workspace]
resolver = "3"
members = ["crates/scepa", "crates/scepa-macros", "crates/cli"]

[workspace.dependencies]
reqwest = { version = "0.13.4", features = ["multipart"] }
rootcause = "0.12.1"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
