[workspace]
resolver = "3"
members = ["crates/scepa", "crates/scepa-macros", "crates/cli"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.13.4", features = ["multipart"] }
rootcause = "0.12.1"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
typedb-driver = "3.12.0"
