[package]
name = "scepa-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
indicatif = "0.18.3"
reqwest.workspace = true
rootcause.workspace = true
rootcause-backtrace = "0.12.1"
scepa-rs = { path = "../scepa" }
tokio.workspace = true
tracing.workspace = true
