[package]
name = "scepa-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest.workspace = true
rootcause.workspace = true
quick-xml = "0.37.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt"] }
typetag = "0.2.22"
